[package]
name = "powercap"
description = "Library for reading powercap files"
edition = "2018"
version = "0.1.0"
authors = ["Jeremie Drouet <jeremie.drouet@gmail.com>"]
repository = "https://github.com/jdrouet/powercap"
license = "MIT OR Apache-2.0"
keywords = ["powercap", "rapl"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { default-features = false, features = ["std", "unicode-perl"], version = "^1.5" }
