[package]
name = "powercap"
description = "Library for reading powercap files"
edition = "2018"
version = "0.3.1"
authors = ["Jeremie Drouet <jeremie.drouet@gmail.com>"]
repository = "https://github.com/jdrouet/powercap"
license = "MIT OR Apache-2.0"
keywords = ["powercap", "rapl"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["modules"]
modules = ["procfs"]

[dependencies]
regex = { default-features = false, features = ["std", "unicode-perl"], version = "^1.5" }
procfs = { default-features = false, version = "^0.11", optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "parsing"
harness = false
