[package]
name = "powercap"
description = "Library for reading powercap files"
edition = "2018"
version = "0.3.5"
authors = ["Jeremie Drouet <jeremie.drouet@gmail.com>"]
repository = "https://github.com/jdrouet/powercap"
license = "MIT OR Apache-2.0"
keywords = ["powercap", "rapl"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["modules"]
modules = ["procfs"]
mock = []
with-serde = ["serde"]

[dependencies]
regex = { default-features = false, features = ["std", "unicode-perl"], version = "^1.7" }
procfs = { default-features = false, version = "^0.15", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.5"
serde_json = "1"
temp-dir = "0.1"

[[bench]]
name = "parsing"
harness = false
